--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "bitset": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "link-list2.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/gcc.exe"
